--- a/.gitignore
+++ b/.gitignore
@@ -40,3 +40,6 @@ pickle-email-*.html
 
 # Rails database configuration
 config/database.yml
+
+# Ignore application configuration
+/config/application.yml
