--- a/.gitignore
+++ b/.gitignore
@@ -31,12 +31,14 @@ capybara-*.html
 /tmp/*
 /db/*.sqlite3
 /public/system/*
+/public/assets/
 /coverage/
 /spec/tmp/*
 **.orig
 rerun.txt
 pickle-email-*.html
 .project
+.secret
 
 # Rails database configuration
 config/database.yml
